<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/location_header">

        <Preference
            android:key="country"
            app:fragment=""
            android:title="@string/country_title"
            app:icon="@drawable/ic_language_black_24dp"
            android:summary="Not set"/>

    </PreferenceCategory>

    <PreferenceCategory  app:title="display">
        <ListPreference
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            app:dialogTitle="@string/theme_dialog_title"
            app:entries="@array/theme_entries"
            app:entryValues="@array/theme_values"
            app:icon="@drawable/ic_weather"
            app:key="theme"
            app:title="@string/theme_signature_title"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_header_about">

        <Preference
            android:selectable="false"
            app:icon="@drawable/ic_info_black_24dp"
            android:summary="@string/summary_about" />

        <Preference
            android:summary="@string/app_version"
            app:icon="@drawable/ic_android_black_24dp"
            android:title="@string/title_version" />

        <Preference
            android:key="feedback"
            app:icon="@drawable/ic_help_black_24dp"
            android:summary="@string/summary_support"
            android:title="@string/title_send_feedback" />

        <Preference
            android:key="rateApp"
            app:icon="@drawable/ic_star_black_24dp"
            app:isPreferenceVisible="false"
            android:summary="@string/rate_app_summary"
            android:title="@string/rate_app" />
    </PreferenceCategory>

</PreferenceScreen>
